[build-system]
requires = ["setuptools>=38.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinterunofficial"
version = "0.1.7"
dependencies = ["httpx==0.23.3", "websocket-client==1.5.1"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[metadata]
description = "This is a unofficial wrapper for Vinter.co API"
author = "Rahul Mistri"
author_email = "rahulmistri1997@gmail.com"

[tool.setuptools]
packages = ["vinterunofficial"]

[project.urls]
homepage = 'https://rahulmistri1997.github.io/vinterunofficial-pypi'
documentation = 'https://rahulmistri1997.github.io/vinterunofficial-pypi'
repository = 'https://github.com/rahulmistri1997/vinterunofficial-pypi'

[options]
python_requires = ">=3.7"
